# cURLio

./: .clang-format  .cmake-format.json  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  cURLio-config.cmake.in  cURLio.hpp  cURLioConfig.cmake.in  curlio-config.cmake.in  header.html
.devcontainer/: Dockerfile  devcontainer.json
cURLio/: CMakeLists.txt  basic_request.hpp  basic_request.inl  basic_response.hpp  basic_response.inl  basic_session.hpp  basic_session.inl  config.hpp  debug.hpp  error.hpp  fwd.hpp
cURLio/detail/: asio_include.hpp  case_insensitive_less.hpp  contains.hpp  final_action.hpp  function.hpp  header_collector.hpp  option_type.hpp  socket_data.hpp
cURLio/quick/: form.hpp  ignore_all.hpp  json.hpp  reader.hpp
curlio/: CMakeLists.txt  basic_request.hpp  basic_request.inl  basic_response.hpp  basic_response.inl  basic_session.hpp  basic_session.inl  curlio.hpp  error.hpp  fwd.hpp  log.hpp  quick.hpp  request-tmp.hpp  request.hpp  response-tmp.hpp  response.hpp  session.hpp
curlio/detail/: asio_include.hpp  case_insensitive_less.hpp  curl_share_lock.hpp  final_action.hpp  function.hpp  header_collector.hpp  mover.hpp  option_type.hpp  shared_data.hpp  socket_data.hpp
curlio/quick/: form.hpp  json.hpp  reader.hpp
docs/html/: annotated.html  annotated_dup.js  classcurlio_1_1_request-members.html  classcurlio_1_1_request.html  classcurlio_1_1_request.js  classcurlio_1_1_response-members.html  classcurlio_1_1_response.html  classcurlio_1_1_response.js  classcurlio_1_1_session-members.html  classcurlio_1_1_session.html  classcurlio_1_1_session.js  classes.html  config_8hpp_source.html  curlio_8hpp_source.html  dir_000000_000001.html  dir_399adac2dd633081a29e5df20298490e.html  dir_399adac2dd633081a29e5df20298490e.js  dir_399adac2dd633081a29e5df20298490e_dep.map  dir_399adac2dd633081a29e5df20298490e_dep.md5  dir_4b23d895defc0ff26afdef8f8adc06ae.html  dir_4b23d895defc0ff26afdef8f8adc06ae.js  dir_4b23d895defc0ff26afdef8f8adc06ae_dep.map  dir_4b23d895defc0ff26afdef8f8adc06ae_dep.md5  error_8hpp.html  error_8hpp.js  error_8hpp__dep__incl.map  error_8hpp__dep__incl.md5  error_8hpp__incl.map  error_8hpp__incl.md5  error_8hpp_source.html  examples.html  examples.js  examples_2simple_8cpp-example.html  files.html  files_dup.js  form_8hpp.html  form_8hpp.js  form_8hpp__dep__incl.map  form_8hpp__dep__incl.md5  form_8hpp__incl.map  (+47 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_7.js  all_8.js  classes_1.js  classes_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
examples/: CMakeLists.txt  playground.cpp  simple.cpp
